--- a/index.html
+++ b/index.html
@@ -5,11 +5,453 @@
     <title>Assignment_07</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/bootstrap-5.3.1-dist/css/bootstrap.min.css">
+
+    <style>
+        #img {
+            position: absolute;
+            width: 700px;
+            height: 500px;
+            right: 100px;
+            top: 150px;
+        }
+
+        .box {
+            background:#18dcff;
+            width: 100%;
+            height: 95vh;
+
+        }
+
+        #text {
+            color: black;
+            position: absolute;
+        }
+
+        #welcome {
+            position: absolute;
+            font-size: 70px;
+            top: 150px;
+            left: 240px;
+        }
+
+        #to {
+            position: absolute;
+            font-size: 70px;
+            top: 250px;
+            left: 395px;
+        }
+
+        #pos{
+            position: absolute;
+            font-size: 70px;
+            top: 350px;
+            left: 370px;
+        }
+
+        #system {
+            position: absolute;
+            font-size: 70px;
+            top: 450px;
+            left: 280px;
+        }
+    </style>
 </head>
 <body>
+
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="index.html">
+    </a>
+
+    <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+            <li class="nav-item active">
+                <a class="nav-link" id="home-nav">POS</a>
+            </li>
+            <li class="nav-item active">
+                <a class="nav-link"  id="customer-nav">Customer</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" id="item-nav">Item</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" id="place-order-nav">Place Order</a>
+            </li>
+        </ul>
+    </div>
+</nav>
+
+<!--   home section  -->
+
+<div class="box" id="myTabContent">
+    <img id="img" src="assets/images/billing_poo.png">
+    <div id="text">
+        <h1 id="welcome">W&nbsp;E&nbsp;L&nbsp;C&nbsp;O&nbsp;M&nbsp;E</h1>
+        <h1 id="to">T&nbsp;O</h1>
+        <h1 id="pos">P&nbsp;O&nbsp;S</h1>
+        <h1 id="system">S&nbsp;Y&nbsp;S&nbsp;T&nbsp;E&nbsp;M</h1>
+    </div>
+    <!--    <div id="box1"></div>-->
+</div>
+
+
+<!--   customer section  -->
+
+<div id="customer-section" class="container">
+    <h1 id="customer">Manage Customer</h1>
+    <div class="row">
+        <!--Form-->
+        <div class="col col-xl-6 col-lg-6 col-md-12 col-sm-12 col12">
+            <form>
+                <div class="mb-3">
+                    <label for="cus_id" class="form-label">Customer_Id</label>
+                    <input type="number" class="form-control" id="cus_id">
+                </div>
+
+                <div class="mb-3">
+                    <label for="name" class="form-label">Customer_Name</label>
+                    <input type="text" class="form-control" id="name">
+                </div>
+
+                <div class="mb-3">
+                    <label for="salary" class="form-label">Salary</label>
+                    <input type="text" class="form-control" id="salary">
+                </div>
+
+                <div class="form-floating">
+                    <textarea class="form-control" placeholder="Enter your address" id="address" style="height: 100px"></textarea>
+                    <label for="address">Address</label>
+                </div>
+
+
+                <div class="mt-4" id="customer_btn">
+                    <button type="button" class="btn btn-warning">Save</button>
+                    <button type="button" class="btn btn-primary">Update</button>
+                    <button type="button" class="btn btn-danger">Delete</button>
+                    <button type="reset" class="btn btn-success">Reset</button>
+                </div>
+            </form>
+        </div>
+        <!--Table-->
+        <div class="col col-xl-6 col-lg-6 col-md-12 col-sm-12 col12">
+            <table class="table">
+                <thead>
+                <tr>
+                    <th scope="col">Customer_Id</th>
+                    <th scope="col">Customer_Name</th>
+                    <th scope="col">Salary</th>
+                    <th scope="col">Address</th>
+                </tr>
+                </thead>
+                <tbody id="customer-tbl-body"></tbody>
+            </table>
+        </div>
+    </div>
+</div>
+
+
+<!--   item section  -->
+
+<div id="item-section" class="container">
+    <h1 id="item">Manage Item</h1>
+    <div class="row">
+        <!--Form-->
+        <div class="col col-xl-6 col-lg-6 col-md-12 col-sm-12 col12">
+            <form>
+                <div class="mb-3">
+                    <label for="code" class="form-label">Item_code :</label>
+                    <input type="number" class="form-control" id="code">
+                </div>
+
+                <div class="mb-3">
+                    <label for="name" class="form-label">Item_name :</label>
+                    <input type="text" class="form-control" id="Item_name">
+                </div>
+
+                <div class="mb-3">
+                    <label for="price" class="form-label">Price :</label>
+                    <input type="text" class="form-control" id="price">
+                </div>
+
+                <div class="mb-3">
+                    <label for="qty" class="form-label">Quantity :</label>
+                    <input type="text" class="form-control" id="qty">
+                </div>
+                <div class="mt-4" id="item_btn">
+
+                    <button type="button" class="btn btn-warning">Save</button>
+                    <button type="button" class="btn btn-primary">Update</button>
+                    <button type="button" class="btn btn-danger">Delete</button>
+                    <button type="reset" class="btn btn-success">Reset</button>
+
+
+                </div>
+            </form>
+        </div>
+        <!--Table-->
+        <div class="col col-xl-6 col-lg-6 col-md-12 col-sm-12 col12">
+            <table class="table">
+                <thead>
+                <tr>
+                    <th scope="col">Code</th>
+                    <th scope="col">Name</th>
+                    <th scope="col">Price</th>
+                    <th scope="col">Qty</th>
+                </tr>
+                </thead>
+                <tbody id="item-tbl-body">
+                </tbody>
+            </table>
+        </div>
+    </div>
+</div>
+
+
+<!--   place_order section  -->
+
+<div id="place-order-section" class="container">
+    <h1 id="place_order">Place Order</h1>
+    <div class="row">
+        <!--Form-->
+        <div class="col col-xl-6 col-lg-6 col-md-12 col-sm-12 col12">
+            <form>
+                <div class="mb-3">
+                    <label for="item_id" class="form-label">Item_Id</label>
+                    <input type="number" class="form-control" id="item_id">
+                </div>
+
+                <div class="mb-3">
+                    <label for="quantity" class="form-label">Quantity</label>
+                    <input type="number" class="form-control" id="quantity">
+                </div>
+
+                <div class="mt-4" id="place_order_btn">
+                    <button type="button" class="btn btn-success">Add</button>
+                </div>
+            </form>
+        </div>
+        <!--Table-->
+        <div class="col col-xl-6 col-lg-6 col-md-12 col-sm-12 col12">
+            <table class="table">
+                <thead>
+                <tr>
+                    <th scope="col">Item_Id</th>
+                    <th scope="col">Quantity</th>
+                    <th scope="col">Total</th>
+                </tr>
+                </thead>
+                <tbody></tbody>
+            </table>
+            <p class="fs-2">Total : </p>
+
+            <div class="input-group mb-3">
+                <input type="text" class="form-control" placeholder="Amount" aria-label="Recipient's username" aria-describedby="basic-addon2">
+                <div class="input-group-append">
+                    <button class="btn btn-outline-secondary" type="button">Calculate</button>
+                </div>
+            </div>
+
+            <p class="fs-2">Cash :</p>
+
+            <div class="mt-4">
+                <button type="button" class="btn btn-primary">Place Order</button>
+            </div>
+
+        </div>
+    </div>
+</div>
 
 
 <script src="assets/lib/jquery.min.js"></script>
 <script src="assets/bootstrap-5.3.1-dist"></script>
+
+<script>
+
+    $("#customer-section").css('display','none');
+    $("#item-section").css('display','none');
+    $("#place-order-section").css('display','none');
+
+
+    //-----------------------------Navigation--------------------------------
+    $("#home-nav").on('click',()=>{
+        $("#customer-section").css('display','none');
+        $("#item-section").css('display','none');
+        $("#place-order-section").css('display','none');
+        $("#myTabContent").css('display','block');
+    })
+
+    $("#customer-nav").on('click',()=>{
+        $("#customer-section").css('display','block');
+        $("#item-section").css('display','none');
+        $("#place-order-section").css('display','none');
+        $("#myTabContent").css('display','none');
+    })
+
+    $("#item-nav").on('click',()=>{
+        $("#customer-section").css('display','none');
+        $("#item-section").css('display','block');
+        $("#place-order-section").css('display','none');
+        $("#myTabContent").css('display','none');
+    })
+
+    $("#place-order-nav").on('click',()=>{
+        $("#customer-section").css('display','none');
+        $("#item-section").css('display','none');
+        $("#place-order-section").css('display','block');
+        $("#myTabContent").css('display','none');
+    })
+    //----------------------------------Customer from-------------------------------------
+    var row_index = null;
+
+    //----------------------------------Submit-------------------------------------
+    $("#customer_btn>button[type='button']").eq(0).on("click", () => {
+        let cus_id = $("#cus_id").val();
+        let name = $("#name").val();
+        let salary = $("#salary").val();
+        let address = $("#address").val();
+
+        console.log(cus_id)
+        console.log(name)
+        console.log(salary)
+        console.log(address)
+
+        let record = `<tr><td class="cus_id">${cus_id}</td><td class="name">${name}</td><td class="salary">${salary}</td><td class="address">${address}</td></tr>`;
+        $("#customer-tbl-body").append(record);
+
+        $("#customer_btn>button[type='reset']").click();
+
+    });
+
+    //----------------------------------Click Row-------------------------------------
+    $("#customer-tbl-body").on("click", "tr", function() {
+        row_index = $(this).index();
+
+        console.log(row_index);
+
+        let cus_id = $(this).find(".cus_id").text();
+        let name = $(this).find(".name").text();
+        let salary = $(this).find(".salary").text();
+        let address = $(this).find(".address").text();
+
+        $("#cus_id").val(cus_id);
+        $("#name").val(name);
+        $("#salary").val(salary);
+        $("#address").val(address);
+    })
+
+    //----------------------------------Update-------------------------------------
+    $("#customer_btn>button[type='button']").eq(1).on("click", () => {
+        let cus_id = $("#cus_id").val();
+        let name = $("#name").val();
+        let salary = $("#salary").val();
+        let address = $("#address").val();
+
+        console.log(cus_id)
+        console.log(name)
+        console.log(salary)
+        console.log(address)
+
+        let record = `<td class="cus_id">${cus_id}</td><td class="name">${name}</td><td class="salary">${salary}</td><td class="address">${address}</td>`;
+        $("tbody>tr").eq(row_index).html(record);
+
+        $("#customer_btn>button[type='reset']").click();
+
+    });
+
+    //----------------------------------Delete-------------------------------------
+    $("#customer_btn>button[type='button']").eq(2).on("click", () => {
+        $("tbody>tr").eq(row_index).remove();
+        $("customer_btn>button[type='reset']").click();
+    })
+
+
+
+
+    //----------------------------------Item from-------------------------------------
+
+
+    var row_index = null;
+
+    //----------------------------------Submit-------------------------------------
+    $("#item_btn>button[type='button']").eq(0).on("click", () => {
+        let code = $("#code").val();
+        let name = $("#name").val();
+        let price = $("#price").val();
+        let qty = $("#qty").val();
+
+        console.log(code)
+        console.log(name)
+        console.log(price)
+        console.log(qty)
+
+        let record = `<tr><td class="code">${code}</td><td class="name">${name}</td><td class="price">${price}</td><td class="qty">${qty}</td></tr>`;
+        $("#item-tbl-body").append(record);
+
+        $("#item_btn>button[type='reset']").click();
+
+    });
+
+    //----------------------------------Click Row-------------------------------------
+    $("#item-tbl-body").on("click", "tr", function() {
+        row_index = $(this).index();
+
+        console.log(row_index);
+
+        let code = $(this).find(".code").text();
+        let name = $(this).find(".name").text();
+        let price = $(this).find(".price").text();
+        let qty = $(this).find(".qty").text();
+
+        $("#code").val(code);
+        $("#name").val(name);
+        $("#price").val(price);
+        $("#qty").val(qty);
+    })
+
+    //----------------------------------Update-------------------------------------
+    $("#item_btn>button[type='button']").eq(1).on("click", () => {
+        let code = $("#code").val();
+        let name = $("#name").val();
+        let price = $("#price").val();
+        let qty = $("#qty").val();
+
+        console.log(code)
+        console.log(name)
+        console.log(price)
+        console.log(qty)
+
+        let record = `<td class="code">${code}</td><td class="name">${name}</td><td class="price">${price}</td><td class="qty">${qty}</td>`;
+        $("tbody>tr").eq(row_index).html(record);
+
+        $("#item_btn>button[type='reset']").click();
+
+    });
+
+    //----------------------------------Delete-------------------------------------
+    $("#item_btn>button[type='button']").eq(2).on("click", () => {
+        $("tbody>tr").eq(row_index).remove();
+        $("#item_btn>button[type='reset']").click();
+    })
+
+
+
+
+    //----------------------------------Place order from-------------------------------------
+
+    //----------------------------------Submit-------------------------------------
+    $("#place_order_btn>button[type='button']").eq(0).on("click", () => {
+        let item_id = $("#item_id").val();
+        let item_name = $("#item_name").val();
+        let quantity = $("#quantity").val();
+        let price = $("#price").val();
+        let description = $("#description").val();
+
+        let record = `<tr><td class="item_id">${item_id}</td><td class="item_name">${item_name}</td><td class="quantity">${quantity}</td><td class="price">${price}</td><td class="description">${description}</td></tr>`;
+        $("#item-tbl-body").append(record);
+
+        $("#place_order_btn>button[type='reset']").click();
+
+    });
+</script>
+
 </body>
 </html>
