--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                             <label  for="address" >Address</label>
                         </div>
 
-                        <div class="mt-4" >
+                        <div class="mt-4" id="customer_btn">
                             <button type="button" class="btn btn-warning">Save</button>
                             <button type="button" class="btn btn-primary">Update</button>
                             <button type="button" class="btn btn-danger">Delete</button>
@@ -104,7 +104,6 @@
     </div>
 </div>
 
-
 <!--   item section  -->
 
 <div id="item-section">
@@ -122,7 +121,7 @@
 
                         <div class="mb-3">
                             <label for="name" class="form-label">Item_name :</label>
-                            <input type="text" class="form-control" id="name01">
+                            <input type="text" class="form-control" id="item_name">
                         </div>
 
                         <div class="mb-3">
@@ -134,7 +133,7 @@
                             <label for="qty" class="form-label">Quantity :</label>
                             <input type="text" class="form-control" id="qty">
                         </div>
-                        <div class="mt-4" id="btn01">
+                        <div class="mt-4" id="item_btn">
 
                             <button type="button" class="btn btn-warning">Save</button>
                             <button type="button" class="btn btn-primary">Update</button>
@@ -162,7 +161,6 @@
         </div>
     </div>
 </div>
-
 
 <!--   place_order section  -->
 
@@ -258,7 +256,7 @@
 <script src="assets/lib/jquery.min.js"></script>
 <script src="assets/bootstrap-5.3.1-dist"></script>
 
-<script src="script.js"></script>
+<script src="assets/js/script.js"></script>
 
 <script>
 
